# externis

./: CMakeLists.txt  README.md  externis.cc  externis.h  output.cc  tracking.cc
docs/: example_trace.json
test/: CMakeLists.txt  find_bad_events.py  test.cc
